<resources>
    <string name="app_name">Feenance</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_data">No Data</string>
    <string name="day">Day</string>
    <string name="start_time">Start Time</string>
    <string name="label">labell</string>
    <string name="days">Days</string>
    <string name="batch_name">Batch Name</string>
    <string name="search">Search</string>
    <string name="sort_by">Sort By</string>
    <string name="unpaid">Unpaid</string>
    <string name="paid">Paid</string>
    <string name="add">Add</string>
    <string name="add_student">Add Student</string>
    <string name="student_s_name">Student\'s Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="set_fees">Set Fees</string>
    <string name="email">Email</string>
    <string name="fees">Fees</string>
    <string name="name">Name</string>
    <string name="batch_name_example">Batch : %s</string>
    <string name="_16_00">16:00</string>
    <string name="select_days">Select Days</string>
    <string name="select_time">Select Time</string>
    <string name="cancel">Cancel</string>
    <string name="decline">Decline</string>
    <string name="none">None</string>
    <string name="my_title">My Title</string>
    <string name="no_students_added">No Students Added</string>
    <string name="sort_by_status">Sort By Status</string>
    <string name="write_something">Write Something</string>
    <string name="status">Status</string>
    <string name="_0_0">0:0</string>
    <string name="textview">TextView</string>
    <string name="unavailable">Unavailable</string>
    <string name="view_report">View Report</string>
    <string name="fees_status">Fees Status</string>
    <string name="june">June</string>
    <string name="april">April</string>
    <string name="november">November</string>
    <string name="july">July</string>
    <string name="october">October</string>
    <string name="may">May</string>
    <string name="february">February</string>
    <string name="september">September</string>
    <string name="august">August</string>
    <string name="january">January</string>
    <string name="december">December</string>
    <string name="march">March</string>
    <string name="payment_received_for">Payment Received For:</string>
    <string name="enter_batch_name">Enter batch name</string>
    <string name="no_report_data">No report Data</string>
    <string name="please_add_students_first">Please add students first!</string>
    <string name="good_m">Good Morning</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="thank_you_for_installing">Thank you for installing!</string>
    <string name="placeholder_time">-:-</string>
    <string name="adds_batch">Adds batch</string>
    <string name="no_data_added">No data added</string>
    <string name="previous">Previous</string>
    <string name="go_back">Go Back</string>
    <string name="subject">Subject</string>
    <string name="send_mail">Send Mail</string>
    <string name="message">Message</string>
    <string name="email_s">Email(s)</string>
    <string name="update">Update</string>
    <string name="contact_another_way">Contact another way</string>
    <string name="email_student">Email Student</string>
    <string name="call">Call</string>
    <string name="search_all_students">Search all Students</string>
    <string name="email_batch">Email Batch</string>
    <string name="reset_batch_to_unpaid">Reset Batch to Unpaid</string>
    <string name="delete_everything_here">Delete everything here</string>
    <string name="number_s">Number(s)</string>
    <string name="send_sms">Send SMS</string>
    <string name="sms_student">SMS Student</string>
    <string name="name_s">Name(s)</string>
    <string name="sms_batch">SMS batch</string>
    <string name="sms_batch_full">SMS Batch</string>
    <string-array name="feesStatuses">
        <item>None</item>
        <item>Paid</item>
        <item>Unpaid</item>
    </string-array>
</resources>