<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/student_search"
        android:icon="@drawable/ic_search_icon"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|withText|collapseActionView" />

    <item
        android:id="@+id/add_student"
        android:icon="@drawable/ic__add_icon"
        android:iconTint="@color/white"
        android:title="@string/add_student"
        app:showAsAction="ifRoom" />

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/dashboard_sortBy"
            android:title="@string/sort_by_status">
            <menu>
                <item
                    android:id="@+id/menu_paid_fees"
                    android:title="@string/paid" />
                <item
                    android:id="@+id/menu_unpaid_fees"
                    android:title="@string/unpaid" />

            </menu>
        </item>
    </group>

    <item
        android:id="@+id/search_all_students"
        android:title="@string/search_all_students" />

    <item
        android:id="@+id/mail_all_students"
        android:title="@string/email_batch" />

    <item
        android:id="@+id/sms_all_students"
        android:title="@string/sms_batch_full" />

    <item
        android:id="@+id/reset_batch"
        android:title="@string/reset_batch_to_unpaid"></item>


    <item
        android:id="@+id/delete_all"
        android:title="@string/delete_everything_here" />


</menu>