<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/student_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search_icon"
        app:showAsAction="ifRoom"
        app:actionViewClass="androidx.appcompat.widget.SearchView" />

    <group
        android:checkableBehavior="single">

        <item
             android:id="@+id/dashboard_sortBy"
            android:title="@string/sort_by" >
            <menu>
                <item
                    android:id="@+id/menu_paid_fees"
                    android:title="@string/paid" />
                <item
                    android:id="@+id/menu_unpaid_fees"
                    android:title="@string/unpaid" />

                </menu>
        </item>
    </group>


</menu>