<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameField"
            style="@style/MyTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_name_of_person"
            app:startIconTint="@color/icons">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/name_s"
                android:maxLength="40"
                android:textColor="@color/white"
                android:textStyle="normal"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/numbersField"
            style="@style/MyTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameField"
            app:startIconDrawable="@drawable/ic_numbers"
            app:startIconTint="@color/icons">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/number_s"
                android:textColor="@color/white"
                android:textStyle="normal"

                app:helperTextTextColor="@color/white"
                tools:ignore="DuplicateSpeakableTextCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/messageField"
            style="@style/MyTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:hint=""
            app:helperText=" "
            app:layout_constraintBottom_toTopOf="@+id/sendButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/numbersField">


            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_regular"
                android:gravity="start"
                android:hint="@string/message"
                android:textColor="@color/white"
                android:textStyle="normal" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/sendButton"
            android:layout_width="182dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="32dp"
            android:text="@string/send_sms"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/messageField" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>