<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <data>

        <variable
            name="AddBatch"
            type="com.example.feesapplication.fragments.AddBatchFragment" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.AddBatchFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/batchNameField"
            style="@style/MyTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/batch_name"
            app:counterEnabled="true"
            app:counterMaxLength="25"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:startIconDrawable="@drawable/ic_insert_name"
            app:startIconTint="@color/icons">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="26"
                android:textColor="?attr/editTextColor"
                android:textSize="20sp"
                android:textStyle="normal" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/startTimeField"
            android:layout_width="180dp"
            android:layout_height="65dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/textview_background"
            android:gravity="center"
            android:hint="0:0"
            android:paddingStart="12dp"
            android:paddingEnd="5dp"
            android:textColor="?attr/editTextColor"
            android:textSize="26sp"
            android:textStyle="normal"
            app:drawableLeftCompat="@drawable/ic_baseline_access_time_filled_24"
            app:drawableTint="@color/icons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/batchNameField"
            app:layout_constraintVertical_bias="0.003" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="158dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="211dp" />

        <Button
            android:id="@+id/timePickerButton"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="35dp"
            android:backgroundTint="@color/icons"
            android:padding="5dp"
            android:text="@string/select_time"
            app:layout_constraintBottom_toTopOf="@+id/tv_day"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/startTimeField"
            app:layout_constraintTop_toBottomOf="@+id/batchNameField"
            app:layout_constraintVertical_bias="0.117" />

        <TextView
            android:id="@+id/tv_day"
            android:layout_width="0dp"
            android:layout_height="65dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/textview_background"
            android:clickable="true"
            android:gravity="center"
            android:hint="@string/select_days"
            android:paddingStart="12dp"
            android:paddingEnd="5dp"
            android:textColor="?attr/editTextColor"
            android:textSize="20sp"
            android:textStyle="normal"
            app:drawableLeftCompat="@drawable/ic_calendar"
            app:drawableRightCompat="@drawable/ic_baseline_arrow_drop_down_24"
            app:drawableTint="@color/icons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startTimeField"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>